test/files/pos/t1840/S.scala
package p
class S { new J }
