test/files/neg/t3946/S_1.scala
package p
class S extends J {
  override protected def m { }
}
